MESOS-3002: Fix getOrElse compilation error for network isolator.

Review: https://reviews.apache.org/r/36277